--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <a href="index.html">Home</a> | <a href="experience.html">Experience</a> |
+      <a href="contact.html">Contact</a>
+    </div>
+
+    <p>My name is Wisarut Sada</p>
+    <img src="./images/private.jpg" width="350px" height="300px" />
+  </body>
 </html>
