--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
       href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/stylesheet" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div>
+    <h1>My Protfolio</h1>
+    <p>
       <a href="index.html">Home</a> | <a href="experience.html">Experience</a> |
       <a href="contact.html">Contact</a>
+    </p>
+    <h1><img src="./images/private.jpg" width="350px" height="300px" /></h1>
+    <h1>Wisarut Sada</h1>
+    <p>
+      Hi my name is Top. I graduated from Chiangmai University. Nice to meet
+      you!
+    </p>
+    <div>
+      <h2>Skills</h2>
+      <h3>Programming</h3>
+      <p>I+ interested in Frontend writing.</p>
+      <h3>Design UI/UX</h3>
+      <p>I have experience in frontend design.</p>
     </div>
-
-    <p>My name is Wisarut Sada</p>
-    <img src="./images/private.jpg" width="350px" height="300px" />
   </body>
 </html>
