--- a/experience.html
+++ b/experience.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Experience</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style2.css" />
+  </head>
+  <body>
+    <h1>Experience</h1>
+    <p>
+      <a href="index.html">Home</a> | <a href="experience.html">Experience</a> |
+      <a href="contact.html">Contact</a>
+    </p>
     <div>
-        <a href="index.html">Home</a> | <a href="experience.html">Experience</a> |
-        <a href="contact.html">Contact</a>
-      </div>
-</body>
+      <h2>Experience</h2>
+      <p>I used to work in networking.</p>
+      <h2>Hobby</h2>
+      <p>I play game.</p>
+    </div>
+  </body>
 </html>
